2017-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix ASMOP_A / ASMOP_ZERO initialization.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improve use of register A.

2017-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/gen.h:
	  Refactor and optimize subtraction.
	* sim/ucsim/z80.src/inst_ed.cc,
	  sim/ucsim/z80.src/inst_ed_r2k.cc:
	  Fix negation.

2017-08-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve left shift.

2017-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.h,
	  src/z80/gen.c,
	  src/z80/ralloc.h,
	  src/z80/ralloc2.cc:
	  Handle register A more like other registers.
	* src/z80/peeph-z80.def:
	  Instructions in jump target for cheaper short jumps.

2017-08-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-20010224-1.c: re-enable

2017-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a gbz80 codegen issue.

2017-07-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCmem.c (initMem),
	* src/hc08/gen.c (aopForSym): fix bug #2385
	* support/regression/tests/bug-2385.c: re-enable for all ports

2017-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve 16-bit left-shift by 7,
	  improve transfers between hl and de (in codegen at a cost in peephole opt).

2017-07-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* configure
	* configure.ac:
	  Remove requirement of C++14.

2017-07-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* aclocal.m4:
	  Added new file.
	* configure
	* configure.ac:
	  Check if C++14 or C++11 is supported.

2017-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-2567.c:
	  Test fpor bug #2567.

2017-07-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c,
	* src/SDCCicode.c
	* src/SDCCralloc.hpp: fix bug #2567, include block num in iCode debug
